package eapli.base.surveymanagement.domain;

public class Answer {
}
